--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   fijkplayer: ^0.8.7
+  permission_handler: ^5.0.1+1
+  dio: ^3.0.9
+  tencent_im_plugin: ^0.2.42
 
 dev_dependencies:
   flutter_test:
